--- a/code/reconstruct_3d.ipynb
+++ b/code/reconstruct_3d.ipynb
@@ -2,6 +2,118 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import scipy.io\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import reconstruct_3d as r3d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "name = \"house\"\n",
+    "plot = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## Load images, K matrices and matches\n",
+    "data_dir = os.path.join('..', 'data', name)\n",
+    "\n",
+    "# images\n",
+    "I1 = scipy.misc.imread(os.path.join(data_dir, \"{}1.jpg\".format(name)))\n",
+    "I2 = scipy.misc.imread(os.path.join(data_dir, \"{}2.jpg\".format(name)))\n",
+    "\n",
+    "# K matrices\n",
+    "K1 = np.array(scipy.io.loadmat(os.path.join(data_dir, \"{}1_K.mat\".format(name)))[\"K\"], order='C')\n",
+    "K2 = np.array(scipy.io.loadmat(os.path.join(data_dir, \"{}2_K.mat\".format(name)))[\"K\"], order='C')\n",
+    "\n",
+    "# corresponding points\n",
+    "# this is a N x 4 where:\n",
+    "# matches[i,0:2] is a point in the first image\n",
+    "# matches[i,2:4] is the corresponding point in the second image\n",
+    "matches = np.loadtxt(os.path.join(data_dir, \"{}_matches.txt\".format(name)))\n",
+    "\n",
+    "# visualize matches (disable or enable this whenever you want)\n",
+    "if plot:\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.imshow(np.concatenate([I1, I2], axis=1))\n",
+    "    ax.plot(matches[:, 0], matches[:, 1], 'r+')\n",
+    "    ax.plot(matches[:, 2] + I1.shape[1], matches[:, 3], 'r+')\n",
+    "    ax.plot(np.array([matches[:, 0], matches[:, 2] + I1.shape[1]]), matches[:, [1, 3]].T, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual in F = 0.3948162870821741\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute the fundamental matrix\n",
+    "(F, res_err) = r3d.fundamental_matrix(matches)\n",
+    "print('Residual in F = {}'.format(res_err))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# compute the essential matrix\n",
+    "E = np.dot(np.dot(K2.T, F), K1)\n",
+    "\n",
+    "# compute the rotation and translation matrices\n",
+    "(R, t) = find_rotation_translation(E)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {
     "collapsed": true
