--- a/code/reconstruct_3d.ipynb
+++ b/code/reconstruct_3d.ipynb
@@ -80,7 +80,7 @@
    "execution_count": 47,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -99,17 +99,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[  0.53893166,  -1.64132252,  -2.93243549],\n",
+       "         [  2.17261586,   2.57266743,  -5.98460251],\n",
+       "         [-17.40112206,   9.86372048,  25.89765876]]]),\n",
+       " array([[-0.10774761, -0.23143412,  0.9668654 ]]))"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# compute the essential matrix\n",
     "E = np.dot(np.dot(K2.T, F), K1)\n",
     "\n",
     "# compute the rotation and translation matrices\n",
-    "(R, t) = find_rotation_translation(E)"
+    "(R, t) = r3d.find_rotation_translation(E)\n",
+    "R, t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.00000000e+00  -5.55111512e-17  -1.04083409e-17]\n",
+      " [  6.93889390e-18   0.00000000e+00   0.00000000e+00]\n",
+      " [  3.46944695e-18  -8.67361738e-18  -4.93311988e-18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(t)):\n",
+    "    tx = np.array([\n",
+    "        [0, -t[i, 2], t[i, 1]],\n",
+    "        [t[i, 2], 0, -t[i, 0]],\n",
+    "        [-t[i, 1], t[i, 0], 0]\n",
+    "    ])\n",
+    "    R = np.dot(np.linalg.pinv(tx), E)\n",
+    "    print(np.dot(tx, R) - E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        , -0.9668654 , -0.23143412],\n",
+       "       [ 0.9668654 ,  0.        ,  0.10774761],\n",
+       "       [ 0.23143412, -0.10774761,  0.        ]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.linalg.pinv?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.98839045, -0.02493647,  0.10417744],\n",
+       "       [-0.02493647,  0.94643825,  0.22376564],\n",
+       "       [ 0.10417744,  0.22376564,  0.0651713 ]])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(tx, np.linalg.pinv(tx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-16.0086895 ,   4.66479029,   0.58665943],\n",
+       "       [ 31.53517701,  -0.60063095,   5.47923821],\n",
+       "       [ 37.6894932 , -34.76823609,  32.        ]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(np.linalg.inv(tx), tx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.26560357,  0.20511145,  0.30157576])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.cross(t[0], R[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.linalg.inv?"
    ]
   },
   {
